--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HOME</title>
+<title>HOME</title>
+<link rel="stylesheet" href="index.css">
+<header>HOME</header>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-    <p>Hello hello home page</p>
+<ul>
+	<li class="menu-item"><a href="index.html">HOME</a></li>
+	<li class="menu-item"><a href="about.html">ABOUT</a></li>
+	<li class="menu-item"><a href="contact.html">CONTACT</a></li>
+</ul>
+<br>
+<p>Hello hello home page</p>
 </body>
 <footer>
 &#169;2019 dvg
