--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CONTACT</title>
+<title>CONTACT</title>
+<header>CONTACT</header>
+<link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-    <form>
-        <label for="name">Name</label><input id="name" type="text"><br>
-        <label for="email">Email</label><input id="email" type="email"><br>
-        <label for="message">Message</label><input id="message" type="textarea"><br>
-        <input type="submit">
-    </form>
+<ul>
+	<li class="menu-item"><a href="index.html">HOME</a></li>
+	<li class="menu-item"><a href="about.html">ABOUT</a></li>
+	<li class="menu-item"><a href="contact.html">CONTACT</a></li>
+</ul>
+<br>
+<br>
+<form>
+	<label for="name">Name </label><input id="name" type="text"><br>
+	<label for="email">Email </label><input id="email" type="email"><br>
+	<label for="message">Message </label><textarea></textarea><br>
+	<input type="submit"><br>
+</form>
 </body>
 <footer>
 &#169;2019 dvg
