--- a/about.html
+++ b/about.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ABOUT</title>
-<link rel="stylesheet" href="about.css">
-<header>ABOUT</header>
+    <title>ABOUT</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-<ul>
-	<li class="menu-item"><a href="index.html">HOME</a></li>
-	<li class="menu-item"><a href="about.html">ABOUT</a></li>
-	<li class="menu-item"><a href="contact.html">CONTACT</a></li>
-</ul>
-<br>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu neque consequat elit consectetur ultrices non tincidunt dui. Duis lobortis massa eu odio fermentum maximus. Cras nec congue massa. Quisque feugiat maximus justo eu scelerisque. Phasellus pellentesque cursus velit quis tempus. Proin nec neque non turpis gravida blandit in non leo. Ut pulvinar pellentesque orci eu tempus. Quisque consequat facilisis felis id vulputate. Aliquam lobortis non enim sed mattis. Sed fermentum odio eget finibus sodales. </p.
-<p>Nunc ultrices orci facilisis libero luctus, eu molestie urna vulputate. Quisque commodo sapien sem, sit amet varius ipsum maximus a. Praesent ac sem vitae quam tincidunt molestie sed in lectus. Mauris nec scelerisque nunc. Cras et odio condimentum, consectetur velit vel, scelerisque metus. Phasellus consequat aliquam nunc. Duis sit amet nibh elit. Duis accumsan nunc eu sem tincidunt sollicitudin. Sed dapibus orci sed urna laoreet, vel egestas orci sodales. </p>
-<p>Proin metus erat, semper posuere massa vitae, hendrerit vulputate arcu. In ac turpis nibh. Nam malesuada lacus rhoncus, pellentesque turpis id, ultrices justo. Curabitur odio purus, tempus nec odio at, tempus finibus quam. Duis ut nibh enim. Quisque laoreet mattis massa, quis auctor nibh viverra vel. 
-	Mauris in rhoncus lectus, in volutpat nulla. Ut finibus, nisi sed ultrices condimentum, eros quam ultrices sem, id dignissim ante ex ut tellus. Morbi pellentesque, lacus at condimentum ultricies, erat augue ullamcorper magna, a lobortis risus risus vitae enim. Morbi ultricies orci at volutpat egestas. Fusce blandit dolor sit amet pharetra blandit. Sed interdum aliquam eros a sollicitudin. Phasellus feugiat ipsum ex, vitae viverra arcu molestie et. </p>
-	<ul>
-		<li>Hobby</li>
-		<li>Hobby</li>
-		<li>Hobby</li>
-	</ul>
-<p>Nunc in fermentum sem. Sed non neque et est pretium cursus. Morbi luctus venenatis semper. Aliquam vel mi leo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque in aliquam quam. Praesent sit amet velit in ipsum aliquam rhoncus a at quam. </p>
-<p>Sed vel malesuada dui. Cras neque augue, condimentum in massa at, eleifend rhoncus tellus. Aliquam ornare dapibus augue a pretium. Curabitur scelerisque nulla quis mi tempus, ac malesuada turpis sollicitudin. Nam fermentum elementum diam, in tincidunt erat aliquam non. Sed semper erat imperdiet pellentesque aliquet. Phasellus a malesuada arcu, in pulvinar elit. Curabitur mattis erat ipsum, in fermentum nunc interdum non. Nam eget sem a odio finibus dignissim. Donec et ipsum interdum dolor porta blandit. Suspendisse libero turpis, fermentum a dolor non, pellentesque semper augue. Maecenas vitae consectetur tortor. </p>
+    <header>
+    <h1>ABOUT</h1>
+    <ul>
+        <li class="menu-item"><a href="index.html">HOME</a></li>
+        <li class="menu-item"><a href="about.html">ABOUT</a></li>
+        <li class="menu-item"><a href="contact.html">CONTACT</a></li>
+    </ul>
+    </header>
+    <br>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu neque consequat elit consectetur ultrices non tincidunt dui. Duis lobortis massa eu odio fermentum maximus. Cras nec congue massa. Quisque feugiat maximus justo eu scelerisque. Phasellus pellentesque cursus velit quis tempus. Proin nec neque non turpis gravida blandit in non leo. Ut pulvinar pellentesque orci eu tempus. Quisque consequat facilisis felis id vulputate. Aliquam lobortis non enim sed mattis. Sed fermentum odio eget finibus sodales. </p.
+    <p>Nunc ultrices orci facilisis libero luctus, eu molestie urna vulputate. Quisque commodo sapien sem, sit amet varius ipsum maximus a. Praesent ac sem vitae quam tincidunt molestie sed in lectus. Mauris nec scelerisque nunc. Cras et odio condimentum, consectetur velit vel, scelerisque metus. Phasellus consequat aliquam nunc. Duis sit amet nibh elit. Duis accumsan nunc eu sem tincidunt sollicitudin. Sed dapibus orci sed urna laoreet, vel egestas orci sodales. </p>
+    <p>Proin metus erat, semper posuere massa vitae, hendrerit vulputate arcu. In ac turpis nibh. Nam malesuada lacus rhoncus, pellentesque turpis id, ultrices justo. Curabitur odio purus, tempus nec odio at, tempus finibus quam. Duis ut nibh enim. Quisque laoreet mattis massa, quis auctor nibh viverra vel. 
+	    <ul>
+            <li>Hobby</li>
+            <li>Hobby</li>
+            <li>Hobby</li>
+        </ul>
+        Mauris in rhoncus lectus, in volutpat nulla. Ut finibus, nisi sed ultrices condimentum, eros quam ultrices sem, id dignissim ante ex ut tellus. Morbi pellentesque, lacus at condimentum ultricies, erat augue ullamcorper magna, a lobortis risus risus vitae enim. Morbi ultricies orci at volutpat egestas. Fusce blandit dolor sit amet pharetra blandit. Sed interdum aliquam eros a sollicitudin. Phasellus feugiat ipsum ex, vitae viverra arcu molestie et. </p> 
+    <p>Nunc in fermentum sem. Sed non neque et est pretium cursus. Morbi luctus venenatis semper. Aliquam vel mi leo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque in aliquam quam. Praesent sit amet velit in ipsum aliquam rhoncus a at quam. </p>
+    <p>Sed vel malesuada dui. Cras neque augue, condimentum in massa at, eleifend rhoncus tellus. Aliquam ornare dapibus augue a pretium. Curabitur scelerisque nulla quis mi tempus, ac malesuada turpis sollicitudin. Nam fermentum elementum diam, in tincidunt erat aliquam non. Sed semper erat imperdiet pellentesque aliquet. Phasellus a malesuada arcu, in pulvinar elit. Curabitur mattis erat ipsum, in fermentum nunc interdum non. Nam eget sem a odio finibus dignissim. Donec et ipsum interdum dolor porta blandit. Suspendisse libero turpis, fermentum a dolor non, pellentesque semper augue. Maecenas vitae consectetur tortor. </p>
 </body>
 <footer>
 &#169;2019 dvg
