--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CONTACT</title>
-<header>CONTACT</header>
-<link rel="stylesheet" href="contact.css">
+    <title>CONTACT</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-<ul>
-	<li class="menu-item"><a href="index.html">HOME</a></li>
-	<li class="menu-item"><a href="about.html">ABOUT</a></li>
-	<li class="menu-item"><a href="contact.html">CONTACT</a></li>
-</ul>
-<br>
-<br>
-<form>
-	<label for="name">Name </label><input id="name" type="text"><br>
-	<label for="email">Email </label><input id="email" type="email"><br>
-	<label for="message">Message </label><textarea></textarea><br>
-	<input type="submit"><br>
-</form>
+    <header>
+    <h1>HOME</h1>
+    <ul>
+        <li class="menu-item"><a href="index.html">HOME</a></li>
+        <li class="menu-item"><a href="about.html">ABOUT</a></li>
+        <li class="menu-item"><a href="contact.html">CONTACT</a></li>
+    </ul>
+    </header>
+    <br>
+    <form action="contact.php">
+        <label for="name">Name </label><input id="name" name="name" type="text"><br>
+        <label for="email">Email </label><input id="email" name="email" type="email"><br>
+        <label for="message">Message </label><textarea id="message" name="message"></textarea><br>
+        <input type="submit"><br>
+    </form>
 </body>
 <footer>
 &#169;2019 dvg
