--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HOME</title>
-<link rel="stylesheet" href="index.css">
-<header>HOME</header>
+    <title>HOME</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<ul>
-	<li class="menu-item"><a href="index.html">HOME</a></li>
-	<li class="menu-item"><a href="about.html">ABOUT</a></li>
-	<li class="menu-item"><a href="contact.html">CONTACT</a></li>
-</ul>
-<br>
-<p>Hello hello home page</p>
+    <header>
+    <h1>HOME</h1>
+    <ul>
+        <li class="menu-item"><a href="index.html">HOME</a></li>
+        <li class="menu-item"><a href="about.html">ABOUT</a></li>
+        <li class="menu-item"><a href="contact.html">CONTACT</a></li>
+    </ul>
+    </header>
+    <br>
+    <p>Hello hello home page</p>
 </body>
 <footer>
 &#169;2019 dvg
